# twopi

./: .dockerignore  Dockerfile  README.md
.github/workflows/: docker.yaml  khata.yaml  twopi-web.yaml  twopi.yaml
currency-cache/: .gitignore  Cargo.toml
currency-cache/src/: cache.rs  main.rs
khata-service/: Cargo.toml
khata-service/migration/: Cargo.toml
khata-service/migration/src/: m20250101_000000_create_table.rs
khata-service/src/: error.rs  keys.rs  main.rs
khata-service/src/entity/: account.rs  transaction_item.rs
khata-service/src/model/: account.rs  category.rs  currency.rs  transaction.rs
khata-service/src/routes/: category.rs  currency_cache.rs  dashboard.rs  mod.rs  transaction.rs
khata-service/user-migration/: Cargo.toml
khata-service/user-migration/src/: lib.rs  main.rs
khata-ui/: .gitignore  eslint.config.ts  index.html  package.json  pnpm-lock.yaml  tsconfig.app.json  vite.config.ts
khata-ui/src/: App.vue  app.css  main.ts  router.ts
khata-ui/src/components/: AccountEditor.vue  CategoryEditor.vue  QueryWrapper.vue  TransactionEditor.vue  TransactionList.vue  TransactionRow.vue
khata-ui/src/lib/: account.ts  auth.ts  category.ts  currency.ts  openapi.ts  query-keys.ts  transaction.ts
khata-ui/src/pages/: app.vue  index.vue
khata-ui/src/pages/app/: settings.vue
twopi-service/: .gitignore  Cargo.toml  README.md
twopi-service/entity/: Cargo.toml
twopi-service/entity/src/entities/: account.rs  category.rs  currency.rs  mod.rs  transaction.rs  transaction_item.rs
twopi-service/migration/: Cargo.toml
twopi-service/migration/src/: lib.rs  m20250101_000000_create_table.rs  m20250128_180753_create_table.rs
twopi-service/src/: auth.rs  cache.rs  error.rs  keys.rs  main.rs
twopi-service/src/entity/: account.rs  category.rs  currency.rs  mod.rs  prelude.rs  transaction.rs  transaction_item.rs
twopi-service/src/model/: account.rs  category.rs  currency.rs  mod.rs  transaction.rs  user.rs
twopi-service/src/model/v2/: category.rs  currency.rs  mod.rs
twopi-service/src/routes/: account.rs  category.rs  currency.rs  currency_cache.rs  dashboard.rs  mod.rs  transaction.rs
twopi-service/src/user_entity/: user.rs
twopi-service/user-migration/: Cargo.toml
twopi-service/user-migration/src/: m20250101_000000_create_table.rs
twopi-ui/: .prettierrc.json  eslint.config.ts  extract-routes.js  package.json  pnpm-lock.yaml  tsconfig.app.json  tsconfig.node.json  typed-router.d.ts  vite.config.ts
twopi-ui/src/: App.vue  app.css  main.ts
twopi-ui/src/components/: AccountEditor.vue  AppPage.vue  CategoryAction.vue  CategoryEditor.vue  CurrencyAction.vue  CurrencyDisplay.vue  LabelAndValue.vue  LocalScope.vue  QueryWrapper.vue  TransactionEditor.vue  TransactionList.vue  TransactionRow.vue
twopi-ui/src/lib/: account.ts  auth.ts  category.ts  currency.ts  query-keys.ts  transaction.ts
twopi-ui/src/lib/hacks/: account-type.ts
twopi-ui/src/pages/: app.vue  index.vue  signin.vue
twopi-ui/src/pages/app/: currency.vue  index.vue  settings.vue
twopi-web/: .gitignore  .npmrc  .prettierrc  app.config.ts  components.json  drizzle.config.ts  entrypoint.sh  eslint.config.js  eslint.config.ts  index.html  migratedb.sh  package.json  pnpm-lock.yaml  tsconfig.app.json  tsconfig.json  vite.config.ts
twopi-web/app/: app.css  client.tsx  router.tsx  ssr.tsx
twopi-web/app/components/: AccountEditor.tsx  AppLayout.tsx  AppSidebar.tsx  Button.tsx  DefaultCatchBoundary.tsx  LabelAndValue.tsx  Layout.tsx  TransactionEditor.tsx  TransactionRow.tsx  app-sidebar.tsx
twopi-web/app/components/ui/: avatar.tsx  breadcrumb.tsx  card.tsx  chart.tsx  dropdown-menu.tsx  select.tsx  separator.tsx  sidebar.tsx  textarea.tsx  tooltip.tsx
twopi-web/app/db/: schema.ts
twopi-web/app/lib/: account-type.ts  auth-client.ts  openapi.ts  query-options.ts
twopi-web/app/lib/hacks/: account-type.ts
twopi-web/app/lib/server/: auth.ts  currency-cache.ts  db.ts  utils.ts
twopi-web/app/lib/server-fns/: account.ts  category.ts  currency.ts  transaction.ts
twopi-web/app/routes/: __root.tsx  app.tsx  index.tsx  signin.tsx  signup.tsx
twopi-web/app/routes/app/: account.tsx  category.tsx  currency.tsx  import-export.tsx  import.tsx  index.tsx  settings.tsx  transaction.tsx
twopi-web/drizzle/: 0000_slim_xavin.sql
twopi-web/drizzle/meta/: 0000_snapshot.json  _journal.json
twopi-web/prisma/: schema.prisma
twopi-web/prisma/migrations/20250105193729_init/: migration.sql
twopi-web/prisma/migrations/20250111153011_init/: migration.sql
twopi-web/prisma/migrations/20250112082551_init/: migration.sql
twopi-web/prisma/migrations/20250113191335_init/: migration.sql
twopi-web/prisma/migrations/20250114191227_init/: migration.sql
twopi-web/prisma/migrations/20250118182831_init/: migration.sql
twopi-web/prisma/migrations/20250118185253_init/: migration.sql
twopi-web/prisma/migrations/20250126110625_cascade/: migration.sql
twopi-web/src/: app.css  main.tsx
twopi-web/src/components/: AccountEditor.tsx  AccountTypeIcon.tsx  AppLayout.tsx  AppSidebar.tsx  CategofyEditor.tsx  CategoryEditor.tsx  CurrencyDisplay.tsx  CurrencyInput.tsx  DefaultCatchBoundary.tsx  DynamicIcon.tsx  LabelAndValue.tsx  NotFound.tsx  PageLayout.tsx  QueryWrapper.tsx  TransactionEditor.tsx  TransactionList.tsx  TransactionRow.tsx
twopi-web/src/components/glass/: Button.tsx
twopi-web/src/components/ui/: accordion.tsx  alert-dialog.tsx  badge.tsx  button.tsx  card.tsx  chart.tsx  combobox.tsx  command.tsx  dialog.tsx  dropdown-menu.tsx  input.tsx  label.tsx  popover.tsx  progress.tsx  select.tsx  separator.tsx  sheet.tsx  sidebar.tsx  switch.tsx  table.tsx  textarea.tsx  toggle.tsx  tooltip.tsx
twopi-web/src/hooks/: use-local-storage.ts
twopi-web/src/lib/: openapi.ts  query-options.ts  utils.ts
twopi-web/src/lib/api/: account.ts  category.ts  currency.ts  transaction.ts
twopi-web/src/lib/hacks/: account-type.ts
twopi-web/src/lib/server-fns/: account.ts  category.ts  transaction.ts
twopi-web/src/routes/: __root.tsx  app.tsx  index.tsx  preview.tsx  signin.tsx
(+82 files in other folders)
