[package]
name = "currency-cache"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
anyhow = "1.0.95"
axum = { version = "0.8.1", features = ["macros", "http2"] }
axum-macros = "0.5.0"
jiff = "0.1.21"
reqwest = { version = "0.12.12", features = ["json"] }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.135"
tokio = { version = "1.43.0", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
