[package]
name = "twopi-service"
version = "0.1.0"
edition = "2024"
publish = false

[workspace]
members = [".", "migration", "user-migration"]

[dependencies]
anyhow = "1.0.96"
argon2 = { version = "0.5.3", features = ["std"] }
async-trait = "0.1.86"
axum = { version = "0.8.1", features = ["macros", "http2"] }
axum-login = "0.17.0"
chrono = { version = "0.4.39", features = ["serde"] }
clap = { version = "4.5.31", features = ["derive"] }
jiff = { version = "0.2.1", features = ["serde"] }
jsonwebtoken = "9.3.1"
lru = "0.13.0"
migration = { path = "migration" }
reqwest = { version = "0.12.12", features = ["json"] }
sea-orm = { version = "1.1.6", features = [
    "sqlx-sqlite",
    "runtime-tokio-rustls",
    "macros",
] }
secrecy = { version = "0.10.3", features = ["serde"] }
serde = { version = "1.0.218", features = ["derive"] }
serde_json = "1.0.139"
thiserror = "2.0.11"
tokio = { version = "1.43.0", features = ["full"] }
tower-http = { version = "0.6.2", features = ["full"] }
tower-sessions-sqlx-store = { version = "0.15.0", features = ["sqlite"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
user-migration = { version = "0.1.0", path = "user-migration" }
utoipa = { version = "5.3.1", features = ["axum_extras", "chrono", "uuid"] }
utoipa-axum = "0.2.0"
utoipa-rapidoc = { version = "6.0.0", features = ["axum"] }
utoipa-scalar = { version = "0.3.0", features = ["axum"] }
utoipa-swagger-ui = { version = "9.0.0", features = ["axum"] }
uuid = { version = "1.14.0", features = ["v7", "serde"] }
validator = { version = "0.20.0", features = ["derive"] }
