[package]
name = "migration"
version = "0.1.0"
edition = "2024"
publish = false

[lib]
name = "migration"
path = "src/lib.rs"

[dependencies]
async-std = { version = "1", features = ["attributes", "tokio1"] }
serde = { version = "1.0.219", features = ["derive"] }
utoipa = "5.3.1"

[dependencies.sea-orm-migration]
version = "1.1.12"
features = ["runtime-tokio-rustls", "sqlx-sqlite"]
