[package]
name = "user-migration"
version = "0.1.0"
edition = "2024"
publish = false

[lib]
name = "user_migration"
path = "src/lib.rs"

[dependencies]
async-std = { version = "1", features = ["attributes", "tokio1"] }

[dependencies.sea-orm-migration]
version = "1.1.12"
features = ["runtime-tokio-rustls", "sqlx-sqlite"]
